env/fastify-url-shortner/preview-5/preview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastify-url-shortner
spec:
  ingressClassName: nginx
  rules:
  - host: example.com  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastify-url-shortner
            port:
              number: 80
